--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 pytelegrambotapi = "^4.15.4"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
